--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "conda_dev"
+name = "localdeps"
 version = "0.0.2"
 authors = [
   { name="Charlie Haley" },
@@ -14,5 +14,5 @@ classifiers = [
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/cshaley/conda-dev"
-"Bug Tracker" = "https://github.com/cshaley/conda-dev/issues"
+"Homepage" = "https://github.com/cshaley/localdeps"
+"Bug Tracker" = "https://github.com/cshaley/localdeps/issues"
